[package]
authors = ["Dmitry Shinkaruk <dimashink@gmail.com>"]
name = "socket-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlink-packet-sock-diag = {path = "../netlink/netlink-packet-sock-diag", version = "0.2"}
netlink-sys = {path = "../netlink/netlink-sys", version = "0.8"}
netlink-packet-utils = {path = "../netlink/netlink-packet-utils", version = "0.4"}
